--- a/package.json
+++ b/package.json
@@ -12,7 +12,9 @@
     "start": "node src/main.js"
   },
   "dependencies": {
+    "chalk": "^5.3.0",
     "dotenv": "^16.4.5",
+    "moment": "^2.30.1",
     "puppeteer": "^22.3.0",
     "telegraf": "^4.16.3"
   }
